2008-07-30  Eric B. Weddington  <eric.weddington@atmel.com>

	* bootstrap: Fix ending ']'.

2008-07-30  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #23959.
	* include/compat/deprecated.h: Fix typo in documentation.

2008-07-30  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #21621.
	* bootstrap: Add ability to use autoconf 2.61 and automake 1.10.x.

2008-07-25  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iom1284p.h (CLKPCE): Fix bit value to be 7.

2008-07-18  Eric B. Weddington  <eric.weddington@atmel.com>

	* doc/api/main_page.dox: Update copyright list.

2008-07-18  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for sourceforge.net bug #1957780.
	* include/avr/fuse.h: Add more documentation on how to set the fuses
	if compiling in C++.

2008-07-18  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for sourceforge.net bug #1969436.
	* include/avr/iom32u4.h (SPM_PAGESIZE): Fix size to be 128.

2008-07-18  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for sourceforge.net bug #2012448.
	* include/avr/iom6450.h (USART0_RX_vect, USART0_UDRE_vect, 
	USART_TX_vect): Add interrupt names as aliases.
	* include/avr/iom3250.h: Ditto.
	* include/avr/iom165.h (USART_RX_vect, USART_UDRE_vect, USART_TX_vect):
	Add interrupt names as aliases.
	* include/avr/iom165p.h: Ditto.

2008-07-18  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for sourceforge.net bug #2010688.
	* include/avr/iotn48.h (WCOL, SPIF): Fix values of bit definitions 
	for SPSR.
	Fix bit definitions for MCUCR, SPMCSR, PRR, PCMSK3, PCMSK1.
	* include/avr/iotn88.h: Add assembler guard for ADC definition. Define
	ADCW.

2008-07-18  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for sourceforge.net bug #2016128.
	* include/avr/iom32m1.h (CAN_TOVF_vect): Add missing underscore in 
	definition.
	* include/avr/iom32c1.h (OCR1A): Fix address to be 0x88.

2008-07-18  Eric B. Weddington  <eric.weddington@atmel.com>
